# server/src/dtos/stack.dto.ts
@@ -1,9 +1,0 @@
-import { ValidateUUID } from 'src/validation';
-
-export class UpdateStackParentDto {
-  @ValidateUUID()
-  oldParentId!: string;
-
-  @ValidateUUID()
-  newParentId!: string;
-}
